# rest-os

./: Cargo.toml  DESIGN.md  LICENSE  README.md  pthelp.py
docker/uefi-image/: Dockerfile  build_image.sh
kernel/: Cargo.toml
kernel/src/: acpi.rs  cpio.rs  elf.rs  lib.rs  multiboot.rs  print.rs  process.rs  processor.rs  scheduler.rs  serial.rs  thread.rs  time.rs  util.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: apic.rs  gdt.rs  interrupts.rs  linker.ld  mod.rs  page_table.rs  pic.rs  serial.rs  syscall.rs  uefi-linker.ld
kernel/src/arch/x86_64/boot/: boot.asm  test.asm
kernel/src/mm/: addr.rs  frame_alloc.rs  heap_alloc.rs  mod.rs  physical_memory.rs
misc/: build_initrd.sh  grub.cfg
shared/boot/: Cargo.toml
shared/boot/src/: lib.rs
shared/elf/: Cargo.toml
shared/elf/src/: lib.rs
shared/kernel_api/: Cargo.toml
shared/kernel_api/src/: lib.rs
src/: grub.rs  main.rs  uefi.rs
uefi-loader/: Cargo.toml
uefi-loader/.cargo/: config
uefi-loader/src/: efi.rs  main.rs
userland/init/: Cargo.toml  linker.ld  x86_64-rest-os.json
userland/init/.cargo/: config
userland/init/src/: main.rs
