[package]
name = "rest-os"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
bitflags = "1.3.2"
kernel_api = { path = "../shared/kernel_api" }
boot = { path = "../shared/boot" }
elf = { path = "../shared/elf" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
