[package]
name = "uefi-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = { path = "../shared/elf" }
boot = { path = "../shared/boot" }
bitflags = "1.3.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
